modules/gdscript/tests/scripts/parser/errors/class_name_after_annotation.gd
# Error here. `classname` should be used *before* annotations, not after.
@icon("res://path/to/optional/icon.svg")
classname HelloWorld

func test():
	pass
